# Raster2Image

./: .gitignore  CMakeLists.txt  ColourMapperParsers.h  ColourMaps.hpp  GifWriterClassified.h  GifWriterGradient.cpp  GifWriterGradient.h  GifWriterLinearGradient.cpp  GifWriterLinearGradient.h  MagickWriterClassified.cpp  MagickWriterClassified.h  MagickWriterGradient.cpp  MagickWriterLinearGradient.cpp  MagickWriterLinearGradient.h  OpenCVVideoWriterClassified.hpp  OpenCVVideoWriterGradient.hpp  OpenCVWriterClassified.hpp  OpenCVWriterGradient.hpp  README.md  Raster2GifClassified.cpp  Raster2GifGradient.cpp  Raster2GifLinearGradient.cpp  Raster2GifShared.cpp  Raster2GifShared.h  Raster2ImageClassified.cpp  Raster2ImageGradient.cpp  Raster2ImageLinearGradient.cpp  main.cpp
Deprecated/: AnimatedGifSaver.cpp  DirectoryRaster2PngLinearGradient.cpp  GifWriterClassified.cpp  GifWriterClassified.h  MagickWriterClassified.h  MagickWriterGradient.h  PngWriterClassified.cpp  PngWriterClassified.h  PngWriterLinearGradient.cpp  PngWriterLinearGradient.h
